test/testdata/classes/methods/static/property_accessors/clashing_method_write_only_error.lox
class Foo {
  // error: write-only properties are not allowed
  // lint error: write-only properties are not allowed
  static set bar(_) {}
  bar() {}

  // error: static 'bar' has already been declared as a property accessor
  // lint error: static 'bar' has already been declared as a property accessor
  static bar() {}
}

_ = Foo;
